# ada_tech_numpy_pandas

./: ADA_TECH_1_numpy_1.ipynb  ADA_TECH_2_numpy_enunciado_exercicio_1.ipynb  ADA_TECH_3_numpy_enunciado_exercicio_2.ipynb  ADA_TECH_4_numpy_2.ipynb  ADA_TECH_6_numpy_enunciado_exercicio_3.ipynb  Ada_Tech_DS_PY_004.csv  Ada_Tech_DS_PY_004.txt  pyproject.toml
limpeza/Data/__MACOSX/: ._Data
limpeza/Notebooks_EDA/: ADA_TECH_1_Limpeza_de_dados.ipynb  cartao.ipynb
pandas/notebooks/: ADA_TECH_10_pandas_enunciado_exercicio_3.ipynb  ADA_TECH_11_pandas_enunciado_exercicio_4.ipynb  ADA_TECH_1_pandas_series.ipynb  ADA_TECH_4_pandas_enunciado_exercicio_1.ipynb  ADA_TECH_5_pandas_enunciado_exercicio_2.ipynb
